logs/dag_id=dag_avec_postgres/run_id=manual__2023-06-14T03:34:38.236612+00:00/task_id=create_postgres_table/attempt=1.log
[2023-06-14T03:34:39.389+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_avec_postgres.create_postgres_table manual__2023-06-14T03:34:38.236612+00:00 [queued]>
[2023-06-14T03:34:39.407+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_avec_postgres.create_postgres_table manual__2023-06-14T03:34:38.236612+00:00 [queued]>
[2023-06-14T03:34:39.407+0000] {taskinstance.py:1308} INFO - Starting attempt 1 of 6
[2023-06-14T03:34:39.433+0000] {taskinstance.py:1327} INFO - Executing <Task(PostgresOperator): create_postgres_table> on 2023-06-14 03:34:38.236612+00:00
[2023-06-14T03:34:39.440+0000] {standard_task_runner.py:57} INFO - Started process 443 to run task
[2023-06-14T03:34:39.443+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'dag_avec_postgres', 'create_postgres_table', 'manual__2023-06-14T03:34:38.236612+00:00', '--job-id', '1927', '--raw', '--subdir', 'DAGS_FOLDER/dag_avec_postgres.py', '--cfg-path', '/tmp/tmpgglgbae2']
[2023-06-14T03:34:39.449+0000] {standard_task_runner.py:85} INFO - Job 1927: Subtask create_postgres_table
[2023-06-14T03:34:39.529+0000] {task_command.py:410} INFO - Running <TaskInstance: dag_avec_postgres.create_postgres_table manual__2023-06-14T03:34:38.236612+00:00 [running]> on host 4a7ff00e5bd0
[2023-06-14T03:34:39.659+0000] {taskinstance.py:1547} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='ismail' AIRFLOW_CTX_DAG_ID='dag_avec_postgres' AIRFLOW_CTX_TASK_ID='create_postgres_table' AIRFLOW_CTX_EXECUTION_DATE='2023-06-14T03:34:38.236612+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-06-14T03:34:38.236612+00:00'
[2023-06-14T03:34:39.660+0000] {sql.py:262} INFO - Executing: 
            create table if not exist dag_runs (
                dt date,
                dag_id character varying,
                primary key (dt, dag_id)
            )
        
[2023-06-14T03:34:39.675+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-06-14T03:34:39.791+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-06-14T03:34:39.798+0000] {sql.py:375} INFO - Running statement: 
            create table if not exist dag_runs (
                dt date,
                dag_id character varying,
                primary key (dt, dag_id)
            )
        , parameters: None
[2023-06-14T03:34:39.803+0000] {taskinstance.py:1824} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 274, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "exist"
LINE 2:             create table if not exist dag_runs (
                                        ^

[2023-06-14T03:34:39.816+0000] {taskinstance.py:1350} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_avec_postgres, task_id=create_postgres_table, execution_date=20230614T033438, start_date=20230614T033439, end_date=20230614T033439
[2023-06-14T03:34:39.833+0000] {standard_task_runner.py:109} ERROR - Failed to execute job 1927 for task create_postgres_table (syntax error at or near "exist"
LINE 2:             create table if not exist dag_runs (
                                        ^
; 443)
[2023-06-14T03:34:39.868+0000] {local_task_job_runner.py:225} INFO - Task exited with return code 1
[2023-06-14T03:34:39.894+0000] {taskinstance.py:2651} INFO - 0 downstream tasks scheduled from follow-on schedule check
